# HeartAI

./: LICENSE  README.md
docs/: README.md
tsdb_ecg_project/: README.md  docker-compose.yml
tsdb_ecg_project/app/: Dockerfile  ingest_ecg_data.py  pyproject.toml  retrieve_ecg_data.py  utils.py
tsdb_ecg_project/init_db/: 01-init.sql
